# viki.ai

./: .gitignore  README.md  index.html  llms.txt  test_navigation.html
service/: API_FIX_SUMMARY.md  SWAGGER_EXAMPLES_FIX.md  install.sh
service/db/flyway/: flyway.conf
service/viki_ai/: README.md  __main__.py  pyproject.toml
service/viki_ai/lib/cmd_line/: cli.py
service/viki_ai/lib/db_config/: db_connect.py
service/viki_ai/lib/model/: __init__.py  agent.py  base.py  chat.py  db_session.py  file_store.py  knowledge_base.py  llm.py  lookup.py  tools.py
service/viki_ai/lib/router/: __init__.py  agent_relationships_router.py  agent_router.py  chat_router.py  file_store_router.py  health_router.py  knowledge_base_router.py  llm_router.py  lookup_router.py  response_utils.py  schemas.py  tools_router.py
service/viki_ai/lib/util/: __init__.py  ai_chat_utility.py  mcp_test_util.py  proxy_config.py  version_util.py
ui/components/base/: base.js
ui/components/viki-agents-canvas/: viki-agents-canvas.css  viki-agents-canvas.html  viki-agents-canvas.js
ui/components/viki-canvas/: viki-canvas.css  viki-canvas.html  viki-canvas.js
ui/components/viki-card/: viki-card.css  viki-card.html  viki-card.js
ui/components/viki-chat-canvas/: viki-chat-canvas.css  viki-chat-canvas.html  viki-chat-canvas.js
ui/components/viki-footer/: viki-footer.js
ui/components/viki-header/: viki-header.css  viki-header.html  viki-header.js
ui/components/viki-html/: viki-html.css  viki-html.html  viki-html.js
ui/script/: api-client.js  main.js
ui/styles/: main.css
(+19 files in other folders)
