[project]
name = "viki_ai"
version = "0.1.0"
description = "VIKI - Open Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.28.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.20",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.21",
    "langchain-huggingface>=0.2.0",
    "langchain-groq>=0.3.2",
    "langchain-azure-ai>=0.1.4",
    "mcp[cli]>=1.9.3",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
]
